# C-Training

./: .gitignore  .gitignore.txt  CMakeLists.txt  Makefile  README.md  devkita64-libnx.cmake
source/: main.cpp
